fix: contraste page accueil

--- a/src/styles/aides-jeunes.css
+++ b/src/styles/aides-jeunes.css
@@ -142,7 +142,7 @@
     transparent 50%,
     transparent 100%
   );
-  color: #27a658;
+  color: #218d4b;
 }
 
 .aj-hero-section--img {
